0-----------------------------------------------------------------------------0
|                                  Changelog:                                 |
0-----------------------------------------------------------------------------0

2.1.1:
------
  * UI
    - The app's design was materialized by Tetsuo55.
    - Icons have been vectorized (also by Tetsuo55).
  * Update Sources
    - Removed the Nightly (Firefox) update source, because their website keeps
      changing and the app has built-in update capabilities anyway.

2.1.0:
------

  * APK Downloads
    - The OS' download service is now used directly instead of proxying
      requests through the installed browser.
    - Downloads respect the user's preference regarding which networks are
      OK to use (WiFi / mobile data).
    - Downloaded APKs can be installed directly from ApkTrack's UI.
  * Permissions
    - ApkTrack needs a new permission (WRITE_EXTERNAL_STORAGE) to write
      downloaded APKs to the sdcard.
  * UI
    - Fixed a longstanding issue where the last check date could overlap
      the action icon (that one really bugged me).
  * Settings
    - Added options to ignore all system / Xposed apps in a single click.
      A screen dedicated to managing ignored apps is still warranted.
    - Added a preference allowing users who enabled background checks to
      automatically download new APKs when they become available.
  * Update Sources
    - Merged the 9Folders update source (only used for com.ninefolders.hd3)
      into the AppBrain proxy, because of new anti-scraping countermeasures.

2.0.4:
------

  * Source detection
    - ApkTrack will set the right update source for itself (upstream or
      F-Droid) depending on who signed the APK.
    - The source for all Xposed modules is now detected automatically.
    - The F-Droid app is now correctly handled by the F-Droid source.
  * Miscellaneous
    - Moved the ApkTrack APKs to a server with more bandwidth.