@@ -1,9 +1,10 @@
 language: android
+jdk: oraclejdk8
 android:
   components:
     - tools
-    - build-tools-23.0.2
-    - android-23
+    - build-tools-24.0.2
+    - android-24
     - sys-img-armeabi-v7a
     - extra-android-m2repository
 
